5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1758_1580.log
== TEST (2019-05-23 12:00:57) 
-- CODE:
from numpy import*
v1=array(eval(input()))
v2=array(eval(input()))
i=0
a=0
b=0
c=0
d=0
j=0
while(i<size(v1)):
	if(v1[i]==-1):
		a=a+1
	elif(v1[i]>=6):
		b=b+1
		d=d+v1[i]
	else:
		c=c+1
		d=d+v1[i]
	i=i+1
print(a)
print(b)
print(c)
print(round(d/(c+b),2)
e=max(v1)
while(j!=e):
		j=j+1
print(v2[j])
-- ERROR:
File "XXXX", line 24
    e=max(v1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 12:01:14) 
-- CODE:
from numpy import*
v1=array(eval(input()))
v2=array(eval(input()))
i=0
a=0
b=0
c=0
d=0
j=0
while(i<size(v1)):
	if(v1[i]==-1):
		a=a+1
	elif(v1[i]>=6):
		b=b+1
		d=d+v1[i]
	else:
		c=c+1
		d=d+v1[i]
	i=i+1
print(a)
print(b)
print(c)
print(round(d/(c+b),2)

while(j!=max(v1)):
		j=j+1
print(v2[j])
-- ERROR:
File "XXXX", line 25
    while(j!=max(v1)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 12:01:59) 
-- CODE:
from numpy import*
v1=array(eval(input()))
v2=array(eval(input()))
i=0
a=0
b=0
c=0
d=0
j=0
while(i<size(v1)):
	if(v1[i]==-1):
		a=a+1
	elif(v1[i]>=6):
		b=b+1
		d=d+v1[i]
	else:
		c=c+1
		d=d+v1[i]
	i=i+1
print(a)
print(b)
print(c)
print(round(d/(c+b),2)

while(v1[j]!=max(v1)):
		j=j+1
print(v2[j])
-- ERROR:
File "XXXX", line 25
    while(v1[j]!=max(v1)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 12:06:42) 
-- CODE:
from numpy import*
v1=array(eval(input()))
v2=array(eval(input()))
i=0
a=0
b=0
c=0
d=0
j=0
while(i<size(v1)):
	if(v1[i]==-1):
		a=a+1
	elif(v1[i]>=6):
		b=b+1
		d=d+v1[i]
	else:
		c=c+1
		d=d+v1[i]
	i=i+1
print(a)
print(b)
print(c)
print(round(d/(c+b),2)

while(v1[j]!=max(v1)):
	j=j+1
print(v2[j])
-- ERROR:
File "XXXX", line 25
    while(v1[j]!=max(v1)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 12:07:01) 
-- CODE:
from numpy import*
v1=array(eval(input()))
v2=array(eval(input()))
i=0
a=0
b=0
c=0
d=0
j=0
while(i<size(v1)):
	if(v1[i]==-1):
		a=a+1
	elif(v1[i]>=6):
		b=b+1
		d=d+v1[i]
	else:
		c=c+1
		d=d+v1[i]
	i=i+1
print(a)
print(b)
print(c)
print(round(d/(c+b),2))

while(v1[j]!=max(v1)):
	j=j+1
print(v2[j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 12:07:13) 
-- CODE:
from numpy import*
v1=array(eval(input()))
v2=array(eval(input()))
i=0
a=0
b=0
c=0
d=0
j=0
while(i<size(v1)):
	if(v1[i]==-1):
		a=a+1
	elif(v1[i]>=6):
		b=b+1
		d=d+v1[i]
	else:
		c=c+1
		d=d+v1[i]
	i=i+1
print(a)
print(b)
print(c)
print(round(d/(c+b),2))

while(v1[j]!=max(v1)):
	j=j+1
print(v2[j])
-- EXECUTION TIME:
0.293347
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
